# sim-lab

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  environment.yml  live_network.py  main.py  pyproject.toml  run_viz.py  sim.py
.github/: pull_request_template.md
configs/: default.yaml  heterogeneous.yaml  high_noise.yaml
docs/: config.md  model.md
src/simlab/: __main__.py  config.py  main.py  sim.py  telemetry.py
src/simlab/viz/: __init__.py  network_viz.py  scene.py  view_model.py
src/simlab/viz/components/: base.py  graph.py  interaction.py  overlays.py  ui.py
tests/: helpers.py  test_config.py  test_main.py  test_sim.py  test_telemetry.py  test_viz.py
viz/: __init__.py  live_network.py  scene.py  view_model.py  viewmodel.py
viz/components/: base.py  graph.py  interaction.py  overlays.py  ui.py
